Fix whitespace issue with videos in PDFs

--- a/themes/startwords/assets/scss/print.scss
+++ b/themes/startwords/assets/scss/print.scss
@@ -269,7 +269,8 @@ h2:first-child {
 body.article article {
     .sketchfab-embed-wrapper iframe,
     .video-embed-wrapper iframe,
-    .deepzoom {
+    .video-embed-wrapper > div,
+    .deepzoom, .kaltura {
         display: none;
     }
 
